Fix issues with holes